about content + footer div fix
about content finished. footer div now shows on top of other layers when overlapping; main body's bottom margin added as well for visibility

--- a/kawhoot_app/static/style.css
+++ b/kawhoot_app/static/style.css
@@ -111,6 +111,7 @@ a {
     height: 1000px;
     background-color: var(--clr-theme-3);
     border-radius: 25px;
+    margin-bottom: 110px;
 }
 
 /* body__login & registration */
@@ -762,7 +763,8 @@ a {
 }
 
 .body-div__main-content-div__about-div__content {
-    line-height: 25px;
+    line-height: 35px;
+    font-size: var(--fs-3);
 }
 
 .body-div__main-content-div__about-div__image-div {
@@ -794,4 +796,5 @@ a {
     border-top: 1px solid var(--clr-general-4);
     position: fixed;
     bottom: 0px;
+    background-color: var(--clr-general-5);
 }
